--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -15,7 +15,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="{{ url_for('home')}}">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Data</a>
@@ -23,14 +23,22 @@
                   <li class="nav-item">
                     <a class="nav-link" href="https://github.com/Adnan10101/Cloud-Enabled-Weather-System">Codes</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('forecast')}}">Forecast</a>
+                  </li>
                   
                   <li class="nav-item">
                     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                   </li>
                 </ul>
-            
+                
               </div>
             </div>
           </nav>
+
+          
+          {% block content %}
+
+          {% endblock content %}
     </body>
 </html>
